--- a/Source/TreasureGuide.Web/appsettings.development.json
+++ b/Source/TreasureGuide.Web/appsettings.development.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "TreasureEntities": "Server=(localdb)\\tcdb;Database=tcdb;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "NakamaNetworkContext": "Server=(localdb)\\tcdb;Database=tcdb;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "JwtIssuerOptions": {
         "Issuer": "https://localhost:44387/",
