--- a/Source/TreasureGuide.Web/appsettings.production.json
+++ b/Source/TreasureGuide.Web/appsettings.production.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "TreasureEntities": ""
+        "NakamaNetworkContext": ""
     },
     "JwtIssuerOptions": {
         "Issuer": "",
