--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="MarkdownSharp" Version="2.0.5" />
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.2" />
         <PackageReference Include="PayPal" Version="1.9.1" />
     </ItemGroup>
     <ItemGroup>
