--- a/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
+++ b/Source/TreasureGuide.Web/TreasureGuide.Web.csproj
@@ -21,24 +21,24 @@
 
     <ItemGroup>
         <PackageReference Include="AspNet.Security.OAuth.Discord" Version="1.0.0-rc2-final" />
-        <PackageReference Include="AspNet.Security.OAuth.Reddit" Version="1.0.0-rc2-final" />
+        <PackageReference Include="AspNet.Security.OAuth.Reddit" Version="1.0.1" />
         <PackageReference Include="AspNet.Security.OAuth.Twitch" Version="1.0.0-rc2-final" />
         <PackageReference Include="AutoMapper" Version="6.1.1" />
         <PackageReference Include="EntityFramework" Version="6.1.3" />
         <PackageReference Include="Markdown" Version="2.2.1" />
         <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.0" />
         <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.3" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Facebook" Version="1.1.3" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="1.1.3" />
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="1.1.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="1.1.3" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="1.1.3" />
-        <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="1.1.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="1.1.6" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.2" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.3" />
         <PackageReference Include="Microsoft.AspNetCore.Owin" Version="1.1.2" />
-        <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="1.0.3" />
-        <PackageReference Include="Microsoft.AspNetCore.Rewrite" Version="1.0.3" />
+        <PackageReference Include="Microsoft.AspNetCore.ResponseCompression" Version="1.0.4" />
+        <PackageReference Include="Microsoft.AspNetCore.Rewrite" Version="1.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.2" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.2" PrivateAssets="All" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
