Fix calc parser pulling supports.

--- a/Source/TreasureGuide.Web/appsettings.production.json
+++ b/Source/TreasureGuide.Web/appsettings.production.json
@@ -8,7 +8,7 @@
         "Audience": ""
     },
     "Authentication:Jwt:Key": "",
-    "Authentication:Google:ClientID": ""
+    "Authentication:Google:ClientID": "",
     "Authentication:Google:ClientSecret": "",
     "Authentication:Facebook:ClientID": "",
     "Authentication:Facebook:ClientSecret": "",
