--- a/Source/TreasureGuide.Sniffer/TreasureGuide.Sniffer.csproj
+++ b/Source/TreasureGuide.Sniffer/TreasureGuide.Sniffer.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="6.1.1" />
         <PackageReference Include="EntityFramework" Version="6.1.3" />
+        <PackageReference Include="Jurassic" Version="3.2.1" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.2" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="1.1.2" />
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="1.1.2" />
